--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,14 +6,12 @@ html {
 
 .banner {
   background-image: url("../images/the-flatiron-building.png");
-  background-position: center;
-  color: white
-}
-
-a. {
   color: white;
 }
 
+a {
+  color: white;
+}
 
 h1{
   font-size: 70px;
@@ -41,13 +39,11 @@ p {
   color: black;
   background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
   }
-}
 
 
-.foote, footer a {
-  font-family: helvetica;
+.footer {
+  background-color: dimgrey;
+  color: white;
   font-size: 11px;
-  font-weight: bold;
-  background-color: dimgray
-  text align: left;
+  text-align: left;
   }
